tests/paczka1/small_fuzzy/93083470.err
Error in line 1: TY7bWlfn A914 10,7
Error in line 8: TY7bWlfn A502 209,55
Error in line 3: TY7bWlfn A502 77,6
Error in line 14: 4HvYP0j6 A500 97,52
